Resolved major issues in IE such as navigation not showing up. Still have to fix a few background problems in IE6.

--- a/public/stylesheets/thought_lead.css
+++ b/public/stylesheets/thought_lead.css
@@ -1,18 +1,18 @@
-html,body,h1,h2,h3,h4,h5,h6,p,span,div,img,blockquote,ol,ul,li,dl,dt,dd,form,input,select,textarea {margin:0;padding:0;}
+html,body,h1,h2,h3,h4,h5,h6,p,span,div,img,blockquote,ol,ul,li,dl,dt,dd,form,input,select,textarea,a {margin:0;padding:0;}
 body {text-align:center; background:url(/images/body_bg.gif) left top repeat-x;}
 #page {position: relative; overflow:hidden; padding:0; word-spacing:-1px; line-height:20px; font-size:14px; font-family: arial, helvetica, sans-serif; margin:0 auto; width:933px; border-left:1px solid #2E3191; border-right:1px solid #2E3191; text-align:left; background:#fff;}
 a, a:active, a:visited, a:hover {text-decoration:none; color:#295FA6;}
 a:hover {text-decoration:underline;}
 a.action {display:block; padding:5px 7px; margin-bottom:10px; background:#E0E8F5;}
 a.action:hover {text-decoration:none; background:#295FA6; color:#fff;}
-ol, ul {list-style-position:inside; list-style-type:none;}
+ol, ul {list-style-position:outside; list-style-type:none;}
 img {border:none;}
 #header, #content, #footer {padding:0 15px;}
 
 h1 {margin-bottom:20px; color:#000; font: normal normal bolder 26px/30px arial, sans-serif; letter-spacing:-.03em; word-spacing:-.03em;}
 .grouped {margin-bottom:0;}
-h2 {margin-top: 20px; margin-bottom:5px; color:#000; font: normal normal bolder 18px/25px arial, sans-serif; letter-spacing:-.03em; word-spacing:-.03em;}
-h3 {margin-top: 10px; margin-bottom:10px; color:#000; font: normal normal bolder 15px/20px arial, sans-serif; letter-spacing:-.03em; word-spacing:-.03em;}
+h2 {margin:20px 0 5px 0; padding:0; color:#000; font: normal normal bolder 18px/25px arial, sans-serif; letter-spacing:-.03em; word-spacing:-.03em;}
+h3 {margin:10px 0 10px 0; padding:0; color:#000; font: normal normal bolder 15px/20px arial, sans-serif; letter-spacing:-.03em; word-spacing:-.03em;}
 
 .meta_info {font-style:italic; font-size:.9em; color:#888;}
 
@@ -20,16 +20,16 @@ h3 {margin-top: 10px; margin-bottom:10px; color:#000; font: normal normal bolder
 /* Header */
 #header {position:relative; height:95px; overflow:hidden; background: url(/images/logo.gif) 15px bottom no-repeat;}
 #header .community_name h1 {display:none;}
-#header a.logo {display:block; width:250px;}
+#header a.logo {display:block; float:left; width:100px;}
 #header a.logo img {float:left;}
-ul.navigation_top {display:block; position:relative; overflow:hidden; float:left; padding:0; margin:45px 0 15px 228px; list-style-position:inside; list-style-type:none;}
+ul.navigation_top {background:yellow; float;left; position:relative; padding:0; margin:45px 0 15px 328px; list-style:none outside;}
 ul.navigation_top li {display:block; float:left; padding:0; margin:0; border-left:1px solid #BABEF4; font:normal normal normal 14px/25px georgia, "times new roman", serif;}
 	ul.navigation_top li a, ul.navigation_top li a:hover, ul.navigation_top li a:visited  {display:block; width:100px; padding:5px 0 5px 14px; text-decoration:none;}
 ul.navigation_top li.current {border-left:2px solid #2E3191; background:url(/images/active_tab.gif) top left repeat-y; font:normal normal bold 14px/25px arial, verdana, sans-serif;}
 ul.navigation_top li.current a {width:99px; color:#000;}
-#header .user_controls {float:right; margin:45px 0 15px; font-size:10px; line-height:35px; color:gray;}
-	#header .user_controls a {color:gray;}
-	#header .user_controls a:hover {color:blue;}
+#header div.user_controls {float:right; font-size:10px; line-height:35px; color:gray;}
+	#header div.user_controls a {color:gray;}
+	#header div.user_controls a:hover {color:blue;}
 
 
 
@@ -39,8 +39,8 @@ ul.navigation_top li.current a {width:99px; color:#000;}
 
 #content #primary {position:relative; float:left; width:689px; padding:0; margin-right:-50px; background:#fff;}
 	#content #primary {width:544px; padding:40px 130px 300px 15px; overflow:hidden;}
-	#content #lesson_placeholder #primary {width:689px; padding:0;}
-#content #primary #lesson_title h1 {display:block; overflow:hidden; padding:40px 0 8px 15px; margin:0; background: #2057A7 url(/images/lesson_head.gif) no-repeat scroll left top; color:#fff; font: normal normal bolder 26px/40px arial, sans-serif; letter-spacing:-.03em; word-spacing:-.03em;}
+	#content #lesson_placeholder #primary {width:689px; padding:0; background:#fff;}
+#content #primary #lesson_title h1 {position:relative; display:block; overflow:hidden; padding:40px 0 8px 15px; margin:0; background: #2057A7 url(/images/lesson_head.gif) no-repeat scroll left top; color:#fff; font: normal normal bolder 26px/40px arial, sans-serif; letter-spacing:-.03em; word-spacing:-.03em;}
 #content #primary p {margin-bottom:20px; font: normal normal normal 14px/25px arial, sans-serif; letter-spacing:.05em; word-spacing:-.07em; color:#19191A;}
 #content #primary #lesson_body {padding:15px 115px 15px 15px; background:url(/images/body_bg.gif) left top repeat-x; overflow:hidden;}
 #content #primary .lesson_info p {margin-bottom:40px; color:#8A8A8C;}
@@ -56,14 +56,15 @@ ul.navigation_top li.current a {width:99px; color:#000;}
 		#secondary .course .course_title p a, #secondary .course .course_title p a:visited {display:block; padding:0 15px; color:#fff;}
 		#secondary .course .course_title p a:hover {text-decoration:none; background:#222;}
 	#secondary .course .lessons {background:#fff; border-left:1px solid #8eaad0; border-right:1px solid #8eaad0;}
-	#secondary .course .lessons ol {padding: 10px 0; list-style: none inside; font: normal normal normal .93em/20px arial, helvetica, verdana, sans-serif;}
-	#secondary .course .lessons ol li {padding:5px 15px 5px 30px; list-style: none inside;  background:url(/images/lesson_icon.gif) 15px 11px no-repeat;}
+	#secondary .course .lessons ol {padding: 10px 0; list-style: none outside; font: normal normal normal .93em/20px arial, helvetica, verdana, sans-serif;}
+	#secondary .course .lessons ol li {padding:5px 15px 5px 30px; list-style:none outside; background:url(/images/lesson_icon.gif) 15px 11px no-repeat;}
 		#secondary .course .lessons ol li:hover {background-color:#ADC6EB;}
 		#secondary .course .lessons ol li a {display:block;}
 		#secondary .course .lessons ol li a:hover {text-decoration:none;}
 	#secondary .course .lessons ol li.current {color:#fff; background:#295FA6 url(/images/current_lesson_icon.gif) 15px 11px no-repeat;}
 		#secondary .course .lessons ol li.current a, #secondary .course .lessons ol li.current a:visited {color:#fff;}
 	#secondary .course .lessons ol li.current img {position:absolute; left:0px;}
+	#footer {clear:both;}
 	
 /* Course Index */
 .chapter {text-transform:uppercase; border-bottom:1px solid #D9E2ED; color:#888; font:normal normal normal 12px/20px arial, helvetica, sans-serif;}
@@ -89,6 +90,6 @@ form input.large, form textarea.large {height:200px;}
 body #page #content form textarea#lesson_body {padding:5px; width:100%; background:none;}
 
 /* Page structures */
-body #content #small {position:relative; width:330px; padding:50px 100px 250px; margin:0 auto; background:#fff; overflow:hidden;}
+body #content #small {position:relative; width:445px; padding:50px 15px 250px; margin:0 auto; background:#fff; overflow:hidden;}
 #small div {margin-bottom:20px;}
 .divider {display:block; padding: 10px 0; border-top:1px solid #D9E2ED;}
